# purplecoin_cli

./: COPYRIGHT  Cargo.toml  README.md
src/: lib.rs  main.rs  primitives.rs  wallet.rs
