[package]
name = "purplecoincli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeroize = { version = "1.4.3", features = ["zeroize_derive"] }
schnorrkel-purplecoin = "0.10.2"
blake3 = "1.3.1"
argon2rs = "0.2.5"
bincode = "2.0.0-rc.1"
lazy_static = "1.4.0"
bech32 = "0.9.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
hex = "0.4.3"
rpassword = "6.0"
chacha20poly1305 = "0.9.0"
clap = { version = "4.0.15", features = ["derive"] }